--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,9 @@
     "hax-behaviors": "LRNWebComponents/hax-behaviors#^0.0.6",
     "materializecss-styles": "LRNWebComponents/materializecss-styles#^0.0.5",
     "paper-spinner": "PolymerElements/paper-spinner#^2.0.0",
-    "paper-tooltip": "PolymerElements/paper-tooltip#^2.0.0"
+    "paper-tooltip": "PolymerElements/paper-tooltip#^2.0.0",
+    "iron-collapse": "PolymerElements/iron-collapse#^2.0.0",
+    "lrndesign-stepper": "LRNWebComponents/lrndesign-stepper#^0.0.3"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
